[gd_scene load_steps=3 format=3 uid="uid://dumlt1s0de75w"]

[ext_resource type="Script" path="res://Scripts/BaseItem.gd" id="1_u64jy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5oguy"]
radius = 699.33
height = 1398.66

[node name="Item" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_u64jy")

[node name="Sprite" type="Sprite2D" parent="."]
rotation = -0.460767
scale = Vector2(0.3, 0.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.1, 0.1)
shape = SubResource("CapsuleShape2D_5oguy")

[node name="CanBePickedUpTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CanBePickedUpTimer" to="." method="_on_can_be_picked_up_timer_timeout"]
